Renamed plugin and support options with file